# ebooker

./: BUILD.bazel  README.md  WORKSPACE  book.proto  data.go  downloader.go  downloader_test.go  input.proto  main.go  maker.go  selector.go  selector_test.go
download/: BUILD.bazel  downloader.go  main.go
