load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

package(
    default_visibility = ["//visibility:public"],
)

gazelle(name = "gazelle")

proto_library(
    name = "input_proto",
    srcs = ["input.proto"],
)

go_proto_library(
    name = "input_proto_go",
    importpath = "ebooker/proto",
    protos = [":input_proto"],
)

go_library(
    name = "data",
    srcs = ["data.go"],
    importpath = "ebooker/data",
    deps = [
        ":input_proto_go",
    ],
)

go_library(
    name = "downloader",
    srcs = ["downloader.go"],
    importpath = "ebooker/downloader",
    deps = [
        ":data",
    ],
)

go_test(
    name = "downloader_test",
    srcs = ["downloader_test.go"],
    embed = [":downloader"],
    deps = [
        "@com_github_jarcoal_httpmock//:go_default_library",
    ],
)

go_library(
    name = "selector",
    srcs = ["selector.go"],
    importpath = "ebooker/selector",
    deps = [
        ":data",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_puerkitobio_goquery//:go_default_library",
    ],
)

go_test(
    name = "selector_test",
    srcs = ["selector_test.go"],
    embed = [":selector"],
)

go_library(
    name = "maker",
    srcs = ["maker.go"],
    importpath = "ebooker/maker",
    deps = [
        ":data",
        "@com_github_bmaupin_go_epub//:go_default_library",
    ],
)

go_binary(
    name = "ebooker",
    srcs = ["main.go"],
    deps = [
        ":data",
        ":downloader",
        ":input_proto_go",
        ":maker",
        ":selector",
        "@org_golang_google_protobuf//encoding/prototext:go_default_library",
    ],
)
