load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

package(
    default_visibility = ["//visibility:public"],
)

go_library(
    name = "downloader_lib",
    srcs = ["downloader.go"],
    importpath = "ebooker/downloader",
    deps = [
        "//:book_proto_go",
        "//:data",
        "@org_golang_google_protobuf//encoding/prototext:go_default_library",
    ],
)

go_test(
    name = "downloader_test",
    srcs = ["downloader_test.go"],
    embed = [":downloader_lib"],
    deps = [
        "@com_github_jarcoal_httpmock//:go_default_library",
    ],
)

go_binary(
    name = "downloader",
    srcs = ["main.go"],
    deps = [
        ":downloader_lib",
    ],
)
